<resources>
    <string name="app_name">EmafelyAcademicApp</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to">Welcome To</string>
    <string name="real_time_experience_and_interaction">Real Time Experience\n and Interaction</string>
    <string name="our_vision">OUR VISION</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="parent_guardian_name">Parent/Guardian Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="name_of_child">Name of Child</string>
    <string name="sex">Sex</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up?</string>
    <string name="stage_one_n_the_first_stage_is_n_through_n_a_competitive_entrance">STAGE ONE \n the first stage is \n through \n a competitive entrance</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="relationship">
        <item>Select Relationship</item>
        <item>Parent</item>
        <item>Guardian</item>
    </string-array>

    <string-array name="stateOfOrigin">
        <item>Select State of Origin</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>