<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45608C"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimension16dp"
        android:paddingEnd="@dimen/dimension16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension50dp"
            android:gravity="center"
            android:text="Emafely Divine \n Treasure School"
            android:textColor="@color/white"
            android:textSize="@dimen/dimension_22" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimension_5dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/et_sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension50dp"
                android:background="@drawable/white_rounded_corner_btn2_blue_background"
                android:paddingLeft="@dimen/dimension16dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimension_5dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/et_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension50dp"
                android:background="@drawable/white_rounded_corner_btn2_blue_background"
                android:paddingLeft="@dimen/dimension16dp"
                android:textColor="@color/white"
                android:inputType="textPassword"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_5dp"
            android:gravity="end"
            android:text="Forgot Password?"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_30dp"
            android:layout_marginBottom="@dimen/dimension20dp"
            android:background="@drawable/white_rounded_corner_btn"
            android:text="Sign In"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginLeft="@dimen/dimension_5dp"
                android:textColor="@color/pale_peach"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>